@@ -193,7 +193,8 @@ enum cl_engine_field {
     CL_ENGINE_MAX_HTMLNORMALIZE,    /* uint64_t */
     CL_ENGINE_MAX_HTMLNOTAGS,       /* uint64_t */
     CL_ENGINE_MAX_SCRIPTNORMALIZE,  /* uint64_t */
-    CL_ENGINE_MAX_ZIPTYPERCG        /* uint64_t */
+    CL_ENGINE_MAX_ZIPTYPERCG,       /* uint64_t */
+    CL_ENGINE_FORCETODISK           /* uint32_t */
 };
 
 enum bytecode_security {
